reset pay data